unpackaged/main/default/objects/Contact/fields/Next_Gen_Notes__c.field-meta.xml
<CustomField>
    <fullName>Next_Gen_Notes__c</fullName>
    <description>Please add any notes related to the Contact&#39;s Global Circle Membership.</description>
    <inlineHelpText>Please add any notes related to the Contact&#39;s Global Circle Membership.</inlineHelpText>
    <label>Next Gen Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>