unpackaged/main/default/objects/Contact/fields/Next_Gen_Override__c.field-meta.xml
<CustomField>
    <fullName>Next_Gen_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the contact should be considered as part of the Global Circle, regardless of age.</inlineHelpText>
    <label>Next Gen Override</label>
    <type>Checkbox</type>
</CustomField>