unpackaged/main/default/objects/Contact/fields/Next_Gen_Prospect_Override__c.field-meta.xml
<CustomField>
    <fullName>Next_Gen_Prospect_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the contact should be considered as part of the Global Circle Investors, regardless of hitting the $500 min</description>
    <inlineHelpText>Check this box if the contact should be considered as part of the Global Circle Investors, regardless of hitting the $500 min</inlineHelpText>
    <label>Next Gen Prospect Override</label>
    <type>Checkbox</type>
</CustomField>