unpackaged/main/default/objects/Contact/fields/Nickname__c.field-meta.xml
<CustomField>
    <fullName>Nickname__c</fullName>
    <inlineHelpText>Contact&#39;s/Donor&#39;s Nickname.</inlineHelpText>
    <label>Nickname</label>
    <length>100</length>
    <type>Text</type>
</CustomField>