unpackaged/main/default/objects/Contact/fields/No_Direct_Mail__c.field-meta.xml
<CustomField>
    <fullName>No_Direct_Mail__c</fullName>
    <formula>Account.No_Direct_Mail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The &quot;No Direct Mail&quot; field is checked for the Account the Contact belongs to (i.e. the donor asked not to receive direct mail).</inlineHelpText>
    <label>No Direct Mail</label>
    <type>Checkbox</type>
</CustomField>