unpackaged/main/default/objects/Contact/fields/No_Planned_Giving_Emails__c.field-meta.xml
<CustomField>
    <fullName>No_Planned_Giving_Emails__c</fullName>
    <inlineHelpText>number of recurring donations with status of active</inlineHelpText>
    <label>No Planned Giving Emails</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>