unpackaged/main/default/objects/Contact/fields/NonOpenerSuppression__c.field-meta.xml
<CustomField>
    <fullName>NonOpenerSuppression__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used by Digital Communication to suppress sends to email addresses identified as non-openers (i.e. the email owner is not opening AJWS emails).</inlineHelpText>
    <label>Non-Opener-Suppression</label>
    <type>Checkbox</type>
</CustomField>