unpackaged/main/default/objects/Contact/fields/Num_of_Advocacy_Actions_in_Past_2_Years__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Advocacy_Actions_in_Past_2_Years__c</fullName>
    <inlineHelpText>Number of Advocacy Actions taken by the Contact in the past 2 years (past 730 days). Rolled up Nightly by two DLRS Actions: 1. &quot;Nightly Email Action in 2 Years&quot; for Development Contacts 2. &quot;Nightly Email Actions in 2 Years&quot; for Email.</inlineHelpText>
    <label>Num of Advocacy Actions in Past 2 Years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>