unpackaged/main/default/objects/Contact/fields/Num_of_Advocacy_Actions_in_Past_Year__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Advocacy_Actions_in_Past_Year__c</fullName>
    <inlineHelpText>Number of Advocacy Actions taken by the Contact in the past year (past 365 days). Rolled up Nightly by two DLRS Actions: 1. &quot;Nightly Email Action in Past Year&quot; for Development Contacts 2. &quot;Nightly Email Actions in Past Year&quot; for Email.</inlineHelpText>
    <label>Num of Advocacy Actions in Past Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>