unpackaged/main/default/objects/Contact/fields/Num_of_Email_Clicks_in_Past_6_Months__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Email_Clicks_in_Past_6_Months__c</fullName>
    <inlineHelpText>Number of email clicks by the Contact in the past year (past 365 days). Rolled up Nightly by two DLRS Actions: 1. &quot;Nightly Clicks in Past 1 Year to Dev&quot; for Development Contacts and. 2. Nightly Unique Clicks in Past 1 Year&quot;  for emails.</inlineHelpText>
    <label>Num of Email Clicks in Past 6 Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>