unpackaged/main/default/objects/Contact/fields/Num_of_Email_Opens_in_Past_3_Months__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Email_Opens_in_Past_3_Months__c</fullName>
    <inlineHelpText>Number of email opens by the Contact in the past 3 months (Last 90 Days). Rolled up Nightly by two DLRS Actions: 1. &quot;Nightly Opens Last 3 Months to Dev&quot; for Development Contacts and. 2. &quot;Nightly Email Opens Last 3 Months&quot; for emails.</inlineHelpText>
    <label>Num of Email Opens in Past 3 Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>