unpackaged/main/default/objects/Contact/fields/Num_of_Emails_for_Contact__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Emails_for_Contact__c</fullName>
    <description>Count of email addresses associated with the Development Contact record. Rolled up by DLRS action named: Email Addresses Count.</description>
    <inlineHelpText>Count of email addresses associated with the Development Contact record. Rolled up by DLRS action named: Email Addresses Count.</inlineHelpText>
    <label>Num of Emails for Contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>