unpackaged/main/default/objects/Contact/fields/Number_of_Campaigns__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Campaigns__c</fullName>
    <inlineHelpText>For email records only. The number of P2P campaigns the parent Contact has created using this email. Part of the SpringBoard package. Rolled-up by SB code.</inlineHelpText>
    <label>Number of Campaigns</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>