unpackaged/main/default/objects/Contact/fields/Number_of_Events_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Events_Last_Year__c</fullName>
    <inlineHelpText>The number of events the Contact attended in the previous calendar year. Rolled-up by DLRS action named: &quot;Nightly # of Events Last Year to Contact&quot;.</inlineHelpText>
    <label>Number of Events Last Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>