unpackaged/main/default/objects/Contact/fields/Number_of_Gifts_This_Year__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Gifts_This_Year__c</fullName>
    <label>Number of Gifts This Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>