unpackaged/main/default/objects/Contact/fields/Number_of_Gifts_Two_Years_Ago__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Gifts_Two_Years_Ago__c</fullName>
    <label>Number of Gifts Two Years Ago</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>