unpackaged/main/default/objects/Contact/fields/One_Click_Donate_CC_Exp_Month__c.field-meta.xml
<CustomField>
    <fullName>One_Click_Donate_CC_Exp_Month__c</fullName>
    <inlineHelpText>Part of the SpringBoard package. Expiration month (number) of the credit card used by the contact&#39;s active OCD subscription.</inlineHelpText>
    <label>One Click Donate CC Exp Month</label>
    <length>2</length>
    <type>Text</type>
</CustomField>