unpackaged/main/default/objects/Contact/fields/One_Click_Donate_CC_Exp_Year__c.field-meta.xml
<CustomField>
    <fullName>One_Click_Donate_CC_Exp_Year__c</fullName>
    <inlineHelpText>Part of the SpringBoard package. Expiration year of the credit card used by the contact&#39;s OCD subscription.</inlineHelpText>
    <label>One Click  Donate CC Exp Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>