unpackaged/main/default/objects/Contact/fields/One_Click_Donate_CC_Last_4__c.field-meta.xml
<CustomField>
    <fullName>One_Click_Donate_CC_Last_4__c</fullName>
    <inlineHelpText>Part of the SpringBoard package. Last 4 digits of the credit card used by the contact&#39;s active OCD subscription.</inlineHelpText>
    <label>One Click Donate CC Last 4</label>
    <length>4</length>
    <type>Text</type>
</CustomField>