unpackaged/main/default/objects/Contact/fields/One_Click_Donate_CC_Type__c.field-meta.xml
<CustomField>
    <fullName>One_Click_Donate_CC_Type__c</fullName>
    <inlineHelpText>Part of the SpringBoard package. Type of credit card used by the contact&#39;s active OCD subscription.</inlineHelpText>
    <label>One Click Donate CC Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>