unpackaged/main/default/objects/Contact/fields/One_Click_Donate_Optin_Date__c.field-meta.xml
<CustomField>
    <fullName>One_Click_Donate_Optin_Date__c</fullName>
    <inlineHelpText>Part of the SpringBoard package. Date the contact opted into OCD.</inlineHelpText>
    <label>One Click Donate Opt-in Date</label>
    <type>Date</type>
</CustomField>