unpackaged/main/default/objects/Contact/fields/One_Click_Donate_OptOut_Date__c.field-meta.xml
<CustomField>
    <fullName>One_Click_Donate_OptOut_Date__c</fullName>
    <inlineHelpText>Not used. Part of the SpringBoard package. Date the contact opted out of One Click Donate.</inlineHelpText>
    <label>One Click Donate Opt-Out Date</label>
    <type>Date</type>
</CustomField>