unpackaged/main/default/objects/Contact/fields/One_Click_Donate_Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>One_Click_Donate_Payment_Gateway__c</fullName>
    <inlineHelpText>Part of the SpringBoard package. Payment gateway used by the contact&#39;s active OCD subscription.</inlineHelpText>
    <label>One Click Donate Payment Gateway</label>
    <length>255</length>
    <type>Text</type>
</CustomField>