unpackaged/main/default/objects/Contact/fields/One_Click_Donate_Token_Expiration__c.field-meta.xml
<CustomField>
    <fullName>One_Click_Donate_Token_Expiration__c</fullName>
    <inlineHelpText>Part of the SpringBoard package. Date/time at which the current OCD token expires.</inlineHelpText>
    <label>One Click Donate Token Expiration</label>
    <type>DateTime</type>
</CustomField>