unpackaged/main/default/objects/Contact/fields/One_Click_Donate_URL__c.field-meta.xml
<CustomField>
    <fullName>One_Click_Donate_URL__c</fullName>
    <inlineHelpText>Part of the SpringBoard package. One Click Donate HMAC token. Append this token to the site/form URL to facilitate a one-click donation.</inlineHelpText>
    <label>One Click Donate URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>