unpackaged/main/default/objects/Contact/fields/Partial_Soft_Credit_Previous_CY__c.field-meta.xml
<CustomField>
    <fullName>Partial_Soft_Credit_Previous_CY__c</fullName>
    <label>Partial Soft Credit Previous CY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>