unpackaged/main/default/objects/Contact/fields/Person_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Person_Account_Type__c</fullName>
    <description>Translated from record types in fC/NPSP org</description>
    <label>Person Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Constituent</fullName>
            </value>
            <value>
                <fullName>Non-Grantee Contact</fullName>
            </value>
            <value>
                <fullName>Email Contact</fullName>
            </value>
            <value>
                <fullName>Springboard</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>