unpackaged/main/default/objects/Contact/fields/Phone_2__c.field-meta.xml
<CustomField>
    <fullName>Phone_2__c</fullName>
    <inlineHelpText>Contact&#39;s secondary phone number.</inlineHelpText>
    <label>Phone #2</label>
    <type>Phone</type>
</CustomField>