unpackaged/main/default/objects/Contact/fields/Phone_2_Notes__c.field-meta.xml
<CustomField>
    <fullName>Phone_2_Notes__c</fullName>
    <inlineHelpText>Enter any additional information/instructions regarding the Contact&#39;s secondary phone number.</inlineHelpText>
    <label>Phone #2 Notes</label>
    <type>TextArea</type>
</CustomField>