unpackaged/main/default/objects/Contact/fields/Planned_Giving_Notes__c.field-meta.xml
<CustomField>
    <fullName>Planned_Giving_Notes__c</fullName>
    <inlineHelpText>Planned Giving related notes.</inlineHelpText>
    <label>Planned Giving Notes</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>