unpackaged/main/default/objects/Contact/fields/Planned_Giving_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Planned_Giving_Prospect__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check box if this Contact is a Prospect for planned giving.</inlineHelpText>
    <label>Planned Giving Prospect</label>
    <type>Checkbox</type>
</CustomField>