unpackaged/main/default/objects/Contact/fields/Prefix__c.field-meta.xml
<CustomField>
    <fullName>Prefix__c</fullName>
    <label>Prefix</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admiral</fullName>
            </value>
            <value>
                <fullName>Ambassador</fullName>
            </value>
            <value>
                <fullName>Cantor</fullName>
            </value>
            <value>
                <fullName>Captain</fullName>
            </value>
            <value>
                <fullName>Chancellor</fullName>
            </value>
            <value>
                <fullName>Chaplain</fullName>
            </value>
            <value>
                <fullName>Colonel</fullName>
            </value>
            <value>
                <fullName>Congressman</fullName>
            </value>
            <value>
                <fullName>Congresswoman</fullName>
            </value>
            <value>
                <fullName>Deacon</fullName>
            </value>
            <value>
                <fullName>Dr.</fullName>
            </value>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Governor</fullName>
            </value>
            <value>
                <fullName>Hazzan</fullName>
            </value>
            <value>
                <fullName>Honorable</fullName>
            </value>
            <value>
                <fullName>Judge</fullName>
            </value>
            <value>
                <fullName>Justice</fullName>
            </value>
            <value>
                <fullName>Lt Col</fullName>
            </value>
            <value>
                <fullName>Maharat</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Miss</fullName>
            </value>
            <value>
                <fullName>Mother</fullName>
            </value>
            <value>
                <fullName>Mr.</fullName>
            </value>
            <value>
                <fullName>Mrs.</fullName>
            </value>
            <value>
                <fullName>Ms.</fullName>
            </value>
            <value>
                <fullName>Mx.</fullName>
            </value>
            <value>
                <fullName>Pastor</fullName>
            </value>
            <value>
                <fullName>Rabba</fullName>
            </value>
            <value>
                <fullName>Rabbanit</fullName>
            </value>
            <value>
                <fullName>Rabbi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>