unpackaged/main/default/objects/Contact/fields/Primary_Address_Type__c.field-meta.xml
<CustomField>
    <fullName>Primary_Address_Type__c</fullName>
    <inlineHelpText>The type of the mailing/primary/default address for this Contact.</inlineHelpText>
    <label>Primary Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Work</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>