unpackaged/main/default/objects/Contact/fields/Primary_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set this field to make this email address the primary email for the contact.  Only one email address can be set as the primary.</inlineHelpText>
    <label>Primary Email</label>
    <type>Checkbox</type>
</CustomField>