unpackaged/main/default/objects/Contact/fields/Primary_IEJE_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_IEJE_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The IEJE team member managing the relationship with this Contact.</inlineHelpText>
    <label>Primary IEJE Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>