unpackaged/main/default/objects/Contact/fields/Primary_Organization_Household__c.field-meta.xml
<CustomField>
    <fullName>Primary_Organization_Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Organization/Household</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>