unpackaged/main/default/objects/Contact/fields/Prior_Core_Clergy__c.field-meta.xml
<CustomField>
    <fullName>Prior_Core_Clergy__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This Contact was previously considered &quot;Core Clergy&quot; for AJWS.</inlineHelpText>
    <label>Prior Core Clergy</label>
    <type>Checkbox</type>
</CustomField>