unpackaged/main/default/objects/Contact/fields/Query_String__c.field-meta.xml
<CustomField>
    <fullName>Query_String__c</fullName>
    <formula>IF(ISBLANK(FirstName),&#39;&#39;, &#39;first_name=&#39; &amp; FirstName) &amp; &#39;&amp;last_name=&#39; &amp; LastName &amp; &#39;&amp;email=&#39; &amp; Email &amp;
IF((MailingStreet == &#39;&#39; || MailingStreet == NULL),&#39;&#39;, &#39;&amp;address=&#39; &amp; MailingStreet)
&amp; IF((MailingCity == &#39;&#39; || MailingCity == NULL),&#39;&#39;, &#39;&amp;city=&#39; &amp; MailingCity )
&amp; IF((MailingState == &#39;&#39; || MailingState == NULL),&#39;&#39;, &#39;&amp;state=&#39; &amp; MailingState)
&amp; IF((MailingPostalCode == &#39;&#39; || MailingPostalCode == NULL),&#39;&#39;, &#39;&amp;zip=&#39; &amp; MailingPostalCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field pulling in user contact information for the encrypted query string. Part of the SpringBoard package.</inlineHelpText>
    <label>Query String</label>
    <type>Text</type>
</CustomField>