unpackaged/main/default/objects/Contact/fields/Query_String_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>Query_String_Encrypted__c</fullName>
    <inlineHelpText>Append this string to the site/form URL to pre-populate user fields. Part of the SpringBoard package.</inlineHelpText>
    <label>Query String Encrypted</label>
    <type>TextArea</type>
</CustomField>