unpackaged/main/default/objects/Contact/fields/RE_Import_ID__c.field-meta.xml
<CustomField>
    <fullName>RE_Import_ID__c</fullName>
    <inlineHelpText>RE Import ID.</inlineHelpText>
    <label>RE Import ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>