unpackaged/main/default/objects/Contact/fields/Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name__c</fullName>
    <inlineHelpText>Used in duplicate matching rules and contact merge field set.  Set by process on creation</inlineHelpText>
    <label>Record Type Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Constituent</fullName>
            </value>
            <value>
                <fullName>Email Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>