unpackaged/main/default/objects/Contact/fields/Recurring_Default_Gift_Amount__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Default_Gift_Amount__c</fullName>
    <formula>&quot;11&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Recurring Default Gift Amount. Part of the SpringBoard package.</inlineHelpText>
    <label>Recurring Default Gift Amount</label>
    <type>Text</type>
</CustomField>