unpackaged/main/default/objects/Contact/fields/Recurring_Donation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Donation_Amount__c</fullName>
    <inlineHelpText>The amount of the contact&#39;s primary recurring donation series. Part of the SpringBoard package.</inlineHelpText>
    <label>Recurring Donation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>