unpackaged/main/default/objects/Contact/fields/Recurring_Donation_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Donation_Order_Id__c</fullName>
    <inlineHelpText>The corresponding series ID for an upgradeable recurring donation. Part of the SpringBoard package.</inlineHelpText>
    <label>Recurring Donation Order Id</label>
    <length>16</length>
    <type>Text</type>
</CustomField>